# projeto-streamlit

./: README.md  app.py  clientes.csv  dados_alterados.csv  pyproject.toml
